--- a/mar2022.html
+++ b/mar2022.html
@@ -54,29 +54,21 @@
         </div>
 
         <div class="row actions">
-                <!-- <div class="large-5 columns speaker-list">
-
-                        <a href="#agenda"  rel="nofollow"
-                               onclick="ga('send', 'event', 'speaker_list', 'speaker_list')">
-                            <h4>Agenda</h4>
-                        </a>
-                </div>
-                <div class="large-5 columns participate">
-
-                        <a href="#speaker_list"  rel="nofollow">
-                            <h4>Speakers</h4>
-                        </a>
-                </div> -->
-
-
-
+             <div class="large-5 columns speaker-list">
+                    <a href="#agenda"  rel="nofollow"
+                           onclick="ga('send', 'event', 'speaker_list', 'speaker_list')">
+                        <h4>Agenda</h4>
+                    </a>
+            </div>
+            <div class="large-5 columns participate">
+                  <a href="#speaker_list"  rel="nofollow">
+                      <h4>Speakers</h4>
+                  </a>
+            </div>
         </div>
 
         <div class="row actions actions-2"> <div class="large-5 columns participate">
 
-            <!-- <a href="#registration"  rel="nofollow">
-                <h4>Register for Converge</h4>
-            </a> -->
     </div></div>
 
     </section>
@@ -104,9 +96,9 @@
         <a href="#registration" class="link"><i>Don't forget to register for virtual Converge happening on Friday, 25th March 2022!</a>
         <br><br>
         <div>
-            <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" >
-                <button class="button" > Register now</button> -->
-                <a href=""><button class="button" > Register now</button>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"  target="_blank" >
+                <button class="button" > Register now</button>
+<!--                <a href=""><button class="button" > Register now</button>-->
             </a>
         </div>
         <br/>
@@ -115,232 +107,126 @@
     </div>
 
 </section>
-<section style="background: #00AEEF; min-height: 50%; text-align: center;">
-    <h5 style="padding: 10%;">Agenda and Speaker details will be added soon</h5>
-</section>
-<!-- <section id="agenda" class="feature">
+
+<section id="agenda" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)"> 
         <h2>Agenda</h2>
     </div>
-
     <div class="timings">
-
         <div class="row">
             <div class="large-4 columns time" id="agenda-0"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    9.15 - 9.25 
-                </p>
+                <p>2:00 - 2:10</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-0"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Welcome to Converge ಬೆಂಗಳೂರು (Bengaluru) - 2020</p>
+                <p>Introduction to Converge</p>
 
             </div>
         </div>
-
         <div class="row">
             <div class="large-4 columns time" id="agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    9:25 - 9.55 
-                </p>
+                <p>2:20 - 3:30</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p><em>Business Strategy :</em> Disconnects with Platform Strategy & What To Do About It?<br><i><font size="4">Anirvan Lahiri & Dinker Charak</i></font></p>
-
+                <p>Panel Discussion<br></p>
             </div>
-
         </div>
-
         <div class="row">
             <div class="large-4 columns time" id="agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    10:00 - 10:40
-                </p>
+                <p>3:30 - 3:35</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p> Re-imagining Healthcare with the National Digital Health Mission <br><i><font size="4">Kiran Anandampillai</i></font></p></p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-3"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    10:45 - 11:15
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-3"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p><em>Aadhaar - </em> a tool for social and financial inclusion for residents and good governance for state<br><i><font size="4">Ashok Kumar</i></font></p></p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-3"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    11:20 - 11:35
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-3"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>Break</p>
             </div>
         </div>
-
+        <div class="row">
+            <div class="large-4 columns time" id="agenda-3"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>3:35 - 4:20</p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-3"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Symposium</p>
+            </div>
+        </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    11:35 - 12:35
-                </p>
+                <p>4:20 - 4:35</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>What are the key takeaways for entrepreneurs, enterprises and policymakers from the emergence of UPI and Aadhaar as platforms?<br><i><font size="4"><em>Panelists -</em> Dr. Ajay Sethi, Mujiruddin Shaikh, Renu Satti, Visalakshi Subramaniam
-                    <br/><em>Moderator -</em> Anirvan Lahiri</i></font></p></p>
+                <p>Lightning Talk</p>
             </div>
         </div>
-
         <div class="row">
             <div class="large-4 columns time" id="agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    12:40 - 13:10
-                </p>
+                <p>4:35 - 4:40</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>The art of the possible with Thoughtworks' Digital Platform<br><i><font size="4">Anumeha Verma, Kavitha T</i></font></p></p>
+                <p>Feedback</p>
             </div>
         </div>
-
         <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
+            <div class="large-4 columns time" id="agenda-6"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    13:15 - 13.45
-                </p>
+                <p>4:40 - 5:25</p>
             </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+            <div class="large-8 columns summary" data-anchor-target="#agenda-6"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p> 𝟙 ➕ 𝟚 is 𝟙𝟛 ; the power of collaborative ecosystem<br><i><font size="4">Sreevathsa Prabhakar</i></font></p></p>
+                <p>Symposium</p>
             </div>
         </div>
-
         <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
+            <div class="large-4 columns time" id="agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    13:45 - 14.15
-                </p>
+                <p>5:25 - 5:40</p>
             </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
+            <div class="large-8 columns summary" data-anchor-target="#agenda-7"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>Lightning Talk</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-4 columns time" id="agenda-8"
+                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+                <p>6:00</p>
+            </div>
+            <div class="large-8 columns summary" data-anchor-target="#agenda-8"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>Event Wrap-Up</p>
             </div>
         </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    14:15 - 16:00
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Hands-on workshop on how to design a sustainable digital ecosystem</p>
-            </div>
-        </div>
-
-        <!-- <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    2:30 PM - 2:45 PM
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Applying AI in Hyper-personalisation<br><i><font size="4">Sabitha Rajat (Business Analyst, Thoughtworks)</i></font></p></p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    2:45 PM - 3:00 PM
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Event Wrap-up</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    3:00 PM - 5:00 PM
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Workshop: Innovation in Product Thinking<br><i><font size="4">Priya Lakhe & Priya Malhotra (Business Analysts, Thoughtworks)</i></font>
-                    <small>On-spot registration (limited seats)</small></p></p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="large-4 columns time" id="agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>
-                    5:00 PM
-                </p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-5"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Networking</p>
-            </div>
-        </div>
     </div>
-    </div>-->
+</section>
+
+<section id="speaker_list" class="speakerList" style="min-height: 50%; text-align: center">
+    <h5 style="padding: 10%; color: #00AEEF">Speaker details will be added soon!</h5>
 </section>
 
 <!--<section id="speaker_list" class="speakerList" >
@@ -448,12 +334,11 @@
                 </ul>
                 <ul class="right">
                     <li><a href="#about">About</a></li>
-                    <!-- <li><a href="#agenda">Agenda</a></li>
-                    <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li> -->
-                    <!-- <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" rel="nofollow">Registration</a> </li> -->
-                    <li> <a href="" rel="nofollow">Registration</a> </li>
+                    <li><a href="#agenda">Agenda</a></li>
+                    <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li>
+                    <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link" target="_blank" rel="nofollow">Registration</a> </li>
 
-                    <!-- <li><a href="#location">Location</a></li> -->
+                 <!-- <li><a href="#location">Location</a></li> -->
                     <li><a href="#archive">Previous Editions</a></li>
                 </ul>
             </section>
@@ -464,7 +349,7 @@
 <!-- 
 <section id="registration" class="feature" >
     <center>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </center>
 </section> -->
 
