--- a/mar2022.html
+++ b/mar2022.html
@@ -71,13 +71,6 @@
             </a>
         </div>
     </div>
-
-    <div class="row actions actions-2">
-        <div class="large-5 columns participate">
-
-        </div>
-    </div>
-
 </section>
 
 <section id="about" class="feature">
@@ -94,12 +87,9 @@
                onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
             <a rel="nofollow" href="mailto:converge-bangalore@thoughtworks.com" title="Email us"
                onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
-            <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
         </div>
     </div>
-
     <div class="row">
-
         <h4>XaaS - Anything as a Service</h4>
         <br>
         <p id="_about"
@@ -111,13 +101,12 @@
         </p>
         <br>
         <a href="#registration" class="link"><i>Don't forget to register for virtual Converge happening on Friday, 25th
-            March 2022!</a>
+            March 2022!</i></a>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
                target="_blank">
                 <button class="button"> Register now</button>
-                <!--                <a href=""><button class="button" > Register now</button>-->
             </a>
         </div>
         <br/>
@@ -264,44 +253,6 @@
             <p>Advisor Technology NDHM</p>
         </div>
     </div>
-   <div class="speakers-list">
-       <div class="speakers-list-item"><img src="./img/2020/ajay.jpg" />
-           <div class="speakers-list-description">
-               <h6>Dr. Ajay Sethi</h6>
-               <p>Venture Partner</p>
-               <p>Accel Partners</p>
-           </div>
-       </div>
-       <div class="speakers-list-item"><img src="./img/2020/anirvan.jpg" />
-           <div class="speakers-list-description">
-               <h6>Anirvan Lahiri</h6>
-               <p>Product Manager</p>
-                <p>Thoughtworks</p>
-
-           </div>
-       </div>
-       <div class="speakers-list-item"><img src="./img/2020/anumeha.jpg" />
-           <div class="speakers-list-description">
-               <h6>Anumeha Verma</h6>
-               <p>Data Strategist - Digital Platform</p>
-                <p>Thoughtworks</p>
-
-           </div>
-       </div>
-       <div class="speakers-list-item"><img src="./img/2020/ashok.jpg" />
-           <div class="speakers-list-description">
-               <h6>Ashok Kumar</h6>
-               <p>Director (Wireless Access), NTIPRIT</p>
-               <p>Department Of Telecommunications</p>
-           </div>
-       </div>
-       <div class="speakers-list-item"><img src="./img/2020/dinker.jpg" />
-           <div class="speakers-list-description">
-               <h6>Dinker Charak</h6>
-               <p>Product Manager</p>
-                <p>Thoughtworks</p>
-           </div>
-       </div>
        <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
            <div class="speakers-list-description">
                <h6>Kavitha Thyagarajan</h6>
@@ -310,34 +261,6 @@
 
            </div>
        </div>
-       <div class="speakers-list-item"><img src="./img/2020/mujir.jpg" />
-        <div class="speakers-list-description">
-            <h6>Mujiruddin Shaikh</h6>
-            <p>Market Tech Principal</p>
-            <p>Thoughtworks</p>
-        </div>
-    </div>
-    <div class="speakers-list-item"><img src="./img/2020/renu.jpg" />
-        <div class="speakers-list-description">
-            <h6>Renu Satti</h6>
-            <p>Senior Vice President</p>
-            <p>PayTM</p>
-        </div>
-    </div>
-    <div class="speakers-list-item"><img src="./img/2020/sreevathsa.jpg" />
-        <div class="speakers-list-description">
-            <h6>Sreevathsa Prabhakar</h6>
-            <p>Entrepreneur</p>
-            <p>Founder, Servify</p>
-        </div>
-    </div>
-    <div class="speakers-list-item"><img src="./img/2020/visalakshi.jpg" />
-        <div class="speakers-list-description">
-            <h6>Visalakshi Subramaniam</h6>
-            <p>Global Head Retail</p>
-            <p>Thoughtworks</p>
-        </div>
-    </div>
    </div>-->
 </section>
 
@@ -371,37 +294,6 @@
     </div>
 </header>
 </center>
-<!--
-<section id="registration" class="feature" >
-    <center>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link" width="640" height="1468" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </center>
-</section> -->
-
-<!-- <section id="location" class="feature">
-    <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
-        <br><h2>Location</h2>
-    </div>
-
-    <div class="row">
-        <div class="large-5 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
-            <p>
-                <span>Thoughtworks Technologies (India) Pvt. Ltd.</span>
-                <span>ACR Mansion G + 3floors 147/F, </span>
-                <span>8th Main,3<sup>rd</sup>Block Koramangala </span>
-                <span>Bangalore-560034 </span>
-                <span><small><a href="https://www.google.co.id/maps/dir//ThoughtWorks,+ACR+Mansion,+147%2FF,+8th+Main,+3rd+Block+Koramangala,+Koramangala+3+Block,+Koramangala,+Bengaluru,+Karnataka+560034,+India/@12.928731,77.6267284,17z/data=!4m13!1m4!3m3!1s0x3bae145e7228354d:0x116853ce31352ab1!2sThoughtWorks!3b1!4m7!1m0!1m5!1m1!1s0x3bae145e7228354d:0x116853ce31352ab1!2m2!1d77.6289171!2d12.9287258?hl=en" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
-            </p>
-        </div>
-
-        <div class="large-7 columns map" data-anchor-target=".address" data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">
-            <a href="https://www.google.co.id/maps/dir//ThoughtWorks,+ACR+Mansion,+147%2FF,+8th+Main,+3rd+Block+Koramangala,+Koramangala+3+Block,+Koramangala,+Bengaluru,+Karnataka+560034,+India/@12.928731,77.6267284,17z/data=!4m13!1m4!3m3!1s0x3bae145e7228354d:0x116853ce31352ab1!2sThoughtWorks!3b1!4m7!1m0!1m5!1m1!1s0x3bae145e7228354d:0x116853ce31352ab1!2m2!1d77.6289171!2d12.9287258?hl=en" target="_blank" rel="nofollow">
-                <img src="./img/map.png" alt="Map" align="center" />
-            </a>
-        </div>
-    </div>
-</section> -->
-
 <section id="archive" class="feature">
     <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
         <h2>Previous Editions</h2>
@@ -410,8 +302,6 @@
     <div class="row">
         <div class="large-12 columns">
             <ul class="grid small-block-grid-3 large-block-grid-6">
-
-
                 <li>
                     <a href="https://info.thoughtworks.com/RE15Q2INEVConvergePuneMay2015_converge-bangalore-november-8-registration.html"
                        target="_blank"
